--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,6 @@
       sinfo -l | grep $SLURM_Q
 
       #test build script
-      jobid=$(sbatch --export=ALL -A EXASGD --gres=gpu:1 --ntasks=1 -p $SLURM_Q -o output -e output -t 60:00 $WORKDIR/buildsystem/build.sh $SCRIPT_ARGS)
       export jobid=$(echo $jobid | cut -f4 -d' ')
       echo $jobid > "$WORKDIR/jobid"
       res=1
@@ -34,6 +33,14 @@
       echo "Finished job with code $res"
       exit $res
 
+# CI constraints for every branch
+workflow:
+  rules:
+      # Only run if source is an open merge request or a branch push
+    - if: $CI_MERGE_REQUEST_IID
+    - if: $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH
 
 .pnnl_tags_template:
   tags:
@@ -42,15 +49,12 @@
     - exasgd
     - marianas
 
-.pnnl-rules:
-  rules:
-   - if: '$CI_PROJECT_ROOT_NAMESPACE == "exasgd"' # Will only apply to PNNL
-
-.pnnl-nonhpc-tags:
+.pnnl_nonhpc_tags:
   tags:
     - k8s
-".gitlab-ci.yml" 148L, 3510C
-
+    - ikp
+    - exasgd
+    - basic
 
 hykkt-test-deception:
   stage: test
@@ -58,12 +62,7 @@ hykkt-test-deception:
   variables:
     SLURM_Q: "a100_shared"
     MY_CLUSTER: "deception"
-    OUTPUT_SUFFIX: "_build"
-    SCRIPT_ARGS: " --build-only --job=gcc-cuda "
-    WORKDIR_SUFFIX: "x86_64-gcc-cuda-build"
   extends:
-    - .pnnl-rules
-    - .pnnl_tags_template
     - .hykkt_script_template
 
 hykkt-test-newell:
@@ -72,23 +71,21 @@ hykkt-test-newell:
   variables:
     SLURM_Q: "newell_shared"
     MY_CLUSTER: "newell"
-    OUTPUT_SUFFIX: "_test"
-    SCRIPT_ARGS: " --test-only --job=gcc-cuda "
-    WORKDIR_SUFFIX: "ppc64le-gcc-cuda-build"
   extends:
-  - .pnnl-rules
   - .pnnl_tags_template
   - .hykkt_script_template
 
 .report-status:
   variables:
-  GIT_STRATEGY: none
+    GIT_STRATEGY: none
+    STATUS_PROJECT: HyKKT
+    STATUS_NAME: PNNL CI
   tags:
     - basic
-  extends:
-    - .pnnl_rules
-    - pnnl_environment_template
   script:
+    # TODO:
+    # - create access token with 'repo:status scope' in Hykkt
+    # - Add PNNL GItlab Ci variable with environment scope (same environment name as below) containing Github authorization token
     - curl -X POST -H @${GITHUB_CURL_HEADERS} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
   environment:
       name: reporting-gitlab
@@ -101,3 +98,10 @@ success:
   extends:
     - .report-status
   stage: .post
+
+failure:
+  stage: .post
+  extends:
+    - .report-status
+  rules:
+    - when: on_failure  
