--- a/.github/workflow/push_mirror.yaml
+++ b/.github/workflow/push_mirror.yaml
@@ -15,12 +15,10 @@ jobs:
        - uses: yesolutions/mirror-action@master
        # Give actions access to some secrets
        with:
-         REMOTE: ${{ secrets.GIT_REPO_URL}}
+         REMOTE: 'https://gitlab.pnnl.gov/exasgd/solvers/hykkt'
          GIT-USERNAME:  ${{ secrets.GIT_USER}}
          GIT-PASSWORD:  ${{ secrets.GIT_PASSWORD}}
 
        - name: Trigger Pipeline
          run: |
-          # TODO define PNNL_PIPELINE_TRIGGER_TOKEN
-          # Create a trigger token and replace the url
-          response=$(curl -X POST -F token=${{ secrets.PNNL_PIPELINE_TRIGGER_TOKEN }} -F ref=${BRANCH_NAME} https://gitlab.pnnl.gov/api/v4/projects/769/trigger/pipeline)
+          response=$(curl -X POST -F token=${{ secrets.PNNL_PIPELINE_TRIGGER }} -F ref=${BRANCH_NAME} https://gitlab.pnnl.gov/api/v4/projects/1166/trigger/pipeline)
