--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@
       tail -f output &
       tailpid=$!
       sinfo -l | grep $SLURM_Q
-
+      jobid=$(sbatch --export=ALL -A EXASGD --gres=gpu:1 --ntasks=1 -p $SLURM_Q -o output -e output -t 60:00 $WORKDIR/buildsystem/build.sh $SCRIPT_ARGS)
       #test build script
       export jobid=$(echo $jobid | cut -f4 -d' ')
       echo $jobid > "$WORKDIR/jobid"
@@ -63,6 +63,7 @@ hykkt-test-deception:
     SLURM_Q: "a100_shared"
     MY_CLUSTER: "deception"
   extends:
+    - .pnnl_tags_template
     - .hykkt_script_template
 
 hykkt-test-newell:
@@ -76,17 +77,19 @@ hykkt-test-newell:
   - .hykkt_script_template
 
 .report-status:
+  image: mrnonz/alpine-git-curl:alpine3.16
   variables:
     GIT_STRATEGY: none
     STATUS_PROJECT: ORNL/hykkt
-    STATUS_NAME: PNNL CI
-  tags:
-    - basic
+    STATUS_NAME: PNNL_CI
+  extends:
+  - .pnnl_nonhpc_tags
   script:
     # TODO:
     # - create access token with 'repo:status scope' in Hykkt
     # - Add PNNL GItlab Ci variable with environment scope (same environment name as below) containing Github authorization token
-    - curl -X POST -H @${GITHUB_CURL_HEADERS} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
+    - curl --version
+    - curl -X POST -H @${GITHUB_CURL_HEADER} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
   environment:
       name: reporting-gitlab
 pending:
@@ -104,4 +107,4 @@ failure:
   extends:
     - .report-status
   rules:
-    - when: on_failure  
+    - when: on_failure
