test of actions

--- a/.github/workflows/push_mirror.yaml
+++ b/.github/workflows/push_mirror.yaml
@@ -1,6 +1,6 @@
 name: Mirroring
 
-# triggers github actions everytime there is a push or mr
+# triggers a github action everytime there is a push or mr
 on: [push, delete]
 
 jobs:
