--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(HyKKT VERSION "0.0.1")
 set(CMAKE_CXX_STANDARD 11)
 
 option(HYKKT_TEST_WITH_BSUB "Use `jsrun` instead of `mpirun` commands when running tests" OFF)
+option(HYKKT_USE_AMD "Use AMD from SuiteSparse" OFF)
 set(HYKKT_CTEST_OUTPUT_DIR ${PROJECT_BINARY_DIR} CACHE PATH "Directory where CTest outputs are saved")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH)
 
@@ -14,9 +15,20 @@ enable_language(CUDA)
 check_language(CUDA)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
+configure_file(
+  "${CMAKE_SOURCE_DIR}/src/hykkt_defs.hpp.in"
+  "${CMAKE_BINARY_DIR}/hykkt_defs.hpp")
+include_directories(${CMAKE_BINARY_DIR})
 
 #find_package(CUDA REQUIRED)
-include(FindAMD)
+
+if (HYKKT_USE_AMD)
+  include(FindAMD)
+  if(NOT AMD_LIBRARY)
+    message(STATUS "Cannot find AMD, disabling SuiteSparse AMD module ...")
+    set(HYKKT_USE_AMD OFF CACHE BOOL "Build without AMD module." FORCE)
+  endif()
+endif()
 
 if(NOT DEFINED CMAKE_CUDA_STANDARD)
   set(CMAKE_CUDA_STANDARD 11)
