--- a/.github/workflows/push_mirror.yaml
+++ b/.github/workflows/push_mirror.yaml
@@ -1,7 +1,7 @@
 name: Mirroring
 
 # triggers a github action everytime there is a push or mr
-on: [push, delete]
+on: [push]
 
 jobs:
   # To test on HPC resources we must first mirror the repo and then trigger a pipeline
@@ -15,6 +15,8 @@ jobs:
        - uses: yesolutions/mirror-action@master
        # Give actions access to some secrets
          with:
+            PUSH_ALL_REFS: "false"
+            GIT_PUSH_ARGS: '--tags --force'
             REMOTE: 'https://gitlab.pnnl.gov/exasgd/solvers/hykkt'
             GIT_USERNAME:  ${{ secrets.GIT_USER}}
             GIT_PASSWORD:  ${{ secrets.GIT_PASSWORD}}
