--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,8 @@ target_link_libraries(hybrid PRIVATE cuda_libs)
 if(NOT AMD_LIBRARY)
   message(STATUS "Cannot find AMD, disabling SuiteSparse AMD module ...")
   set(HYKKT_USE_AMD OFF CACHE BOOL "Build without AMD module." FORCE)
-else()  
+else()
+  if(HYKKT_USE_AMD)	
   target_link_libraries(hybrid PUBLIC AMD)
+  endif()
 endif()  
