--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -134,7 +134,8 @@ target_link_libraries(solver_driver_emulator PUBLIC cuda_libs $<TARGET_OBJECTS:h
 if(NOT AMD_LIBRARY)
   message(STATUS "Cannot find AMD, disabling SuiteSparse AMD module ...")
   set(HYKKT_USE_AMD OFF CACHE BOOL "Build without cuSOLVER LU module." FORCE)
-else()  
+else() 
+  if(HYKKT_USE_AMD)	
 	message(STATUS "Found AMD")
 	target_link_libraries(perm_driver PUBLIC AMD)
 	target_link_libraries(ruiz_driver PUBLIC AMD)
@@ -143,4 +144,5 @@ else()
 	target_link_libraries(hybrid_driver PUBLIC AMD)
 	target_link_libraries(solver_driver PUBLIC AMD)
 	target_link_libraries(solver_driver_emulator PUBLIC AMD)
+  endif()
 endif()
