--- a/.github/workflows/push_mirror.yaml
+++ b/.github/workflows/push_mirror.yaml
@@ -16,7 +16,7 @@ jobs:
        # Give actions access to some secrets
          with:
             PUSH_ALL_REFS: "false"
-            GIT_PUSH_ARGS: '--tags --force'
+            GIT_PUSH_ARGS: '--push-option=ci.skip --tags --force'
             REMOTE: 'https://gitlab.pnnl.gov/exasgd/solvers/hykkt'
             GIT_USERNAME:  ${{ secrets.GIT_USER}}
             GIT_PASSWORD:  ${{ secrets.GIT_PASSWORD}}
@@ -24,5 +24,7 @@ jobs:
        - name: Trigger Pipeline
          run: |
           response=$(curl -X POST -F token=${{ secrets.PNNL_PIPELINE_TRIGGER }} -F ref=${BRANCH_NAME} https://gitlab.pnnl.gov/api/v4/projects/1166/trigger/pipeline)
+          exit_code=$?
+          exit $exit_code
 
   
