--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,9 @@
       tail -f output &
       tailpid=$!
       sinfo -l | grep $SLURM_Q
-      jobid=$(sbatch --export=ALL -A EXASGD --gres=gpu:1 --ntasks=1 -p $SLURM_Q -o output -e output -t 60:00 $WORKDIR/buildsystem/build.sh $SCRIPT_ARGS)
       #test build script
+      jobid=$(sbatch --export=ALL -A EXASGD --gres=gpu:1 --ntasks=1 -p $SLURM_Q -o output -e output -t 60:00 $WORKDIR/buildsystem/build.sh $SCRIPT_ARGS)
+      
       export jobid=$(echo $jobid | cut -f4 -d' ')
       echo $jobid > "$WORKDIR/jobid"
       res=1
@@ -33,14 +34,6 @@
       echo "Finished job with code $res"
       exit $res
 
-# CI constraints for every branch
-workflow:
-  rules:
-      # Only run if source is an open merge request or a branch push
-    - if: $CI_MERGE_REQUEST_IID
-    - if: $CI_OPEN_MERGE_REQUESTS
-      when: never
-    - if: $CI_COMMIT_BRANCH
 
 .pnnl_tags_template:
   tags:
@@ -48,6 +41,7 @@ workflow:
     - ikp
     - exasgd
     - marianas
+    - deception
 
 .pnnl_nonhpc_tags:
   tags:
@@ -76,6 +70,17 @@ hykkt-test-newell:
   - .pnnl_tags_template
   - .hykkt_script_template
 
+
+SVC Account Cleanup:
+  stage: .pre
+  extends:
+   - .pnnl_nonhpc_tags
+  script:
+    - export WORKDIR="$HOME/gitlab/"
+    # clears directory of files more than 1 day/1440 minutes old
+    - find $WORKDIR -D -type d -mindepth 1 -mmin +1440 -prune -print -exec rm -rf {} \; || true
+    - ls -hal $WORKDIR    
+
 .report-status:
   image: mrnonz/alpine-git-curl:alpine3.16
   variables:
@@ -85,9 +90,6 @@ hykkt-test-newell:
   extends:
   - .pnnl_nonhpc_tags
   script:
-    # TODO:
-    # - create access token with 'repo:status scope' in Hykkt
-    # - Add PNNL GItlab Ci variable with environment scope (same environment name as below) containing Github authorization token
     - curl --version
     - curl -X POST -H @${GITHUB_CURL_HEADER} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
   environment:
