--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ SVC Account Cleanup:
   - .pnnl_nonhpc_tags
   script:
     - curl --version
-    - curl -X POST -H @${GITHUB_CURL_HEADER} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
+    - curl -L POST -H @${GITHUB_CURL_HEADER} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
   environment:
       name: reporting-gitlab
 pending:
