--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,8 +90,13 @@ SVC Account Cleanup:
   extends:
   - .pnnl_nonhpc_tags
   script:
-    - curl --version
-    - curl -L POST -H @${GITHUB_CURL_HEADER} https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA}?state=${CI_JOB_NAME}\&context=${STATUS_NAME}\&target_url=${CI_PIPELINE_URL}
+    - |
+      set -x
+      curl -L \
+      -X POST \
+      -H @${GITHUB_CURL_HEADER}\
+       https://api.github.com/repos/${STATUS_PROJECT}/statuses/${CI_COMMIT_SHA} \
+       -d "{\"state\":\"${CI_JOB_NAME}\",\"target_url\":\"${CI_PIPELINE_URL}\",\"context\":\"${STATUS_NAME}\"}"
   environment:
       name: reporting-gitlab
 pending:
