Updated Development Branch

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -134,3 +134,19 @@ install(TARGETS schur_cg_driver DESTINATION "${CMAKE_INSTALL_PREFIX}")
 install(TARGETS hybrid_driver DESTINATION "${CMAKE_INSTALL_PREFIX}")
 install(TARGETS solver_driver DESTINATION "${CMAKE_INSTALL_PREFIX}")
 
+
+if (HYKKT_USE_AMD)
+  if(NOT AMD_LIBRARY)
+    message(STATUS "Cannot find AMD, disabling SuiteSparse AMD module ...")
+    set(HYKKT_USE_AMD OFF CACHE BOOL "Build without SuiteSparse AMD module." FORCE)
+  else()
+    target_link_libraries(perm_driver PUBLIC AMD)
+    target_link_libraries(ruiz_driver PUBLIC AMD)
+    target_link_libraries(chol_driver PUBLIC AMD)
+    target_link_libraries(schur_cg_driver PUBLIC AMD)
+    target_link_libraries(hybrid_driver PUBLIC AMD)
+    target_link_libraries(solver_driver PUBLIC AMD)
+  endif()
+else()
+  message(STATUS "Not using SuiteSparse AMD")
+endif()
