--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ if (HYKKT_USE_AMD)
     set(HYKKT_USE_AMD OFF CACHE BOOL "Build without SuiteSparse AMD module." FORCE)
   else()
     target_link_libraries(hykkt_libs PUBLIC AMD)
+    install(TARGETS AMD EXPORT HyKKT-targets)
   endif()
 else()
   message(STATUS "Not using SuiteSparse AMD")
