added straggling utility files

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -222,12 +222,12 @@ target_link_libraries(solver_driver PUBLIC HyKKT::HyKKT)
 add_executable(solver_driver_emulator cuSolver_driver_solver_emulator.cpp)
 target_link_libraries(solver_driver_emulator PUBLIC HyKKT::HyKKT)
 
-find_package(benchmark REQUIRED)
-include_directories(${benchmark_INCLUDE_DIRS})
-add_executable(sandbox sandbox_test.cpp)
-target_link_libraries(sandbox PUBLIC benchmark::benchmark HyKKT::HyKKT)
-add_test(NAME sandbox1
-  COMMAND ${RUNCMD} $<TARGET_FILE:sandbox>) #${sandbox_args})
+#find_package(benchmark REQUIRED)
+#include_directories(${benchmark_INCLUDE_DIRS})
+#add_executable(sandbox sandbox_test.cpp)
+#target_link_libraries(sandbox PUBLIC benchmark::benchmark HyKKT::HyKKT)
+#add_test(NAME sandbox1
+# COMMAND ${RUNCMD} $<TARGET_FILE:sandbox>) #${sandbox_args})
 
 add_executable(operator_driver driver_operator_applier.cpp)
 target_link_libraries(operator_driver PUBLIC HyKKT::HyKKT)
@@ -272,7 +272,7 @@ install(TARGETS operator_driver DESTINATION "${CMAKE_INSTALL_PREFIX}")
 install(TARGETS lpqp_solver DESTINATION "${CMAKE_INSTALL_PREFIX}")
 install(TARGETS log_barrier DESTINATION "${CMAKE_INSTALL_PREFIX}")
 install(TARGETS lb_helper DESTINATION "${CMAKE_INSTALL_PREFIX}")
-install(TARGETS sandbox DESTINATION "${CMAKE_INSTALL_PREFIX}")
+#install(TARGETS sandbox DESTINATION "${CMAKE_INSTALL_PREFIX}")
 #install(TARGETS BiELL DESTINATION "${CMAKE_INSTALL_PREFIX}")
 
 if (HYKKT_USE_AMD)
@@ -291,7 +291,7 @@ if (HYKKT_USE_AMD)
     target_link_libraries(lpqp_solver PUBLIC AMD)
     target_link_libraries(log_barrier PUBLIC AMD)
     target_link_libraries(lb_helper PUBLIC AMD)
-    target_link_libraries(sandbox PUBLIC AMD)
+    #target_link_libraries(sandbox PUBLIC AMD)
     #target_link_libraries(BiELL PUBLIC AMD)
     endif()
 else()
